--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,9 @@
 buildscript {
 
+    repositories {
+        // other repositories...
+        mavenCentral()
+    }
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.44"
     }
@@ -9,4 +13,6 @@ plugins {
     id 'com.android.application' version '7.4.1' apply false
     id 'com.android.library' version '7.4.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id 'com.google.dagger.hilt.android' version '2.45' apply false
+
 }
